# CMake---vcpkg---Clang-Code-Template

./: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
.cache/clangd/index/: main.cpp.2F9A35C99F9082DF.idx
